application.yml to remote repository

--- a/user-boot/src/main/resources/bootstrap.yml
+++ b/user-boot/src/main/resources/bootstrap.yml
@@ -4,10 +4,9 @@ server:
 spring:
   application:
     name: user
-#  cloud:
-#    config:
-#      uri: http://${configServerIp}:${configServerPort}/config/
-#      fail-fast: true
+  cloud:
+    config:
+      uri: http://localhost:8888
   profiles:
     active: ${activatedProperties}
 encrypt:
